Lighthouse audit: fixed link color contrast issue

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -12,8 +12,8 @@ $gray:                      #f2f2f7;
 
 $primary:                   #414648;
 
-$blue:                      #198ce9;
-$blue-hover:                #0e60b1;
+$blue:                      #105B98;
+$blue-hover:                #198ce9;
 
 $blue-gray:                 #a7b6bD;
 $text-color-sidenav:        $blue-gray;
